--- a/src/pages/Navigation.module.scss
+++ b/src/pages/Navigation.module.scss
@@ -28,6 +28,9 @@
 	&__list {
 		display: none;
 	}
+	&__icon {
+		fill: $white;
+	}
 }
 
 @media (min-width: 768px) {
@@ -84,7 +87,6 @@
 			fill: $orange;
 		}
 		&__icon {
-			fill: $white;
 			transition: fill 0.3s;
 		}
 		&__icon:hover {
